WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107191
REGRESSION (
r139985
): Full Screen Youtube loses keyboard and mouse control
https://bugs.webkit.org/show_bug.cgi?id=107191
Summary
REGRESSION (r139985): Full Screen Youtube loses keyboard and mouse control
Kevin M. Dean
Reported
2013-01-17 15:33:09 PST
Go to the link. Set the video to full screen and then don't move the mouse. Once the top title bar and the bottom control bars slide off, I can no longer press ESC to exit full screen, click to pause, move the mouse to see the cursor and bring back the top/bottom bars. To get out, Command-TAB will get you out or if you select Webkit while Command-Tabbing you can quickly press ESC to get the video out of full screen.
Attachments
standalone fix
(1.95 KB, patch)
2013-01-18 16:14 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-01-18 09:35:00 PST
***
Bug 107279
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 2
2013-01-18 09:46:31 PST
Oops, my fault. Sam's refactoring in
bug 107216
fixes this. Will mark as a duplicate once it's clear that it can be landed soon. Otherwise, I will just fix this regression.
Alexey Proskuryakov
Comment 3
2013-01-18 09:47:07 PST
<
rdar://problem/13042826
>
Alexey Proskuryakov
Comment 4
2013-01-18 16:14:35 PST
Created
attachment 183568
[details]
standalone fix Ok, Sam seems busy, so just fixing this issue.
Alexey Proskuryakov
Comment 5
2013-01-18 16:56:09 PST
Fixed in <
http://trac.webkit.org/changeset/140220
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug