        <rdar://problem/13042826> REGRESSION (r139985): Full Screen Youtube loses keyboard and mouse control         https://bugs.webkit.org/show_bug.cgi?id=107191

Reviewed by Darin Adler.

        Moved initialization from platformInitializePluginProcess to platformInitializeProcess,
        because the former is called too late. In r139985, I used a correct location for
        WebProcess, but not for PluginProcess.

        * PluginProcess/mac/PluginProcessMac.mm:
        (WebKit::PluginProcess::platformInitializeProcess):
        (WebKit::PluginProcess::platformInitializePluginProcess):



Canonical link: https://commits.webkit.org/125574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140220 268f45cc-cd09-0410-ab3c-d52691b4dbfc